Updated hcom.html with new URL

--- a/hcom.html
+++ b/hcom.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-      <iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-HOT"
+      <iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-JOB1"
           id="netlify"
           frameborder="0"
           seamless="false"
