--- a/hcom.html
+++ b/hcom.html
@@ -18,14 +18,12 @@
 					<table id="leftTable">
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/currentActivity.action"
-									seamless="true"></iframe>
+								<iframe src="//bamboo.hcom/telemetry.action?filter=project&projectKey=IOS"></iframe>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/telemetry.action?filter=project&projectKey=IOS"
-									seamless="true"></iframe>
+								<iframe src="//bamboo.hcom/currentActivity.action"></iframe>
 							</td>
 						</tr>
 					</table>
@@ -34,14 +32,12 @@
 					<table id="rightTable">
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-JOB1"
-									seamless="false"></iframe>
+								<iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-JOB1"></iframe>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<iframe src="//jira.hotels.com/issues/?filter=24074"
-									seamless="true"></iframe>
+								<iframe src="//jira.hotels.com/issues/?filter=24074"></iframe>
 							</td>
 						</tr>
 					</table>
