Attempt to remove scrollbars.

--- a/hcom.html
+++ b/hcom.html
@@ -18,12 +18,12 @@
 					<table id="leftTable">
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/telemetry.action?filter=project&projectKey=IOS"></iframe>
+								<iframe src="//bamboo.hcom/telemetry.action?filter=project&projectKey=IOS" scrolling="no"></iframe>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/currentActivity.action"></iframe>
+								<iframe src="//bamboo.hcom/currentActivity.action" scrolling="no"></iframe>
 							</td>
 						</tr>
 					</table>
@@ -32,12 +32,12 @@
 					<table id="rightTable">
 						<tr>
 							<td>
-								<iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-JOB1"></iframe>
+								<iframe src="//bamboo.hcom/agent/viewAgents.action?planKey=IOS-DEV-JOB1" scrolling="no"></iframe>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<iframe src="//jira.hotels.com/issues/?filter=24074"></iframe>
+								<iframe src="//jira.hotels.com/issues/?filter=24074" scrolling="no"></iframe>
 							</td>
 						</tr>
 					</table>
