Updating HCOM wallboard since the jira.hotels.com domain is moving to jira.hcom

--- a/hcom.html
+++ b/hcom.html
@@ -37,7 +37,7 @@
 						</tr>
 						<tr>
 							<td>
-								<iframe src="//jira.hotels.com/issues/?filter=24074" scrolling="no"></iframe>
+								<iframe src="//jira.hcom/issues/?filter=24074" scrolling="no"></iframe>
 							</td>
 						</tr>
 					</table>
