--- a/yay.html
+++ b/yay.html
@@ -1,12 +1,13 @@
 <html><body>
 
-<a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;end"> Link A </a>
+<a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;end"> Link A </a><br/><br/>
 
-<a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"> Link B </a>
+<a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"> Link B </a><br/><br/>
 
 
-<a href="googlechrome://www.google.com">Link C</a>
+<a href="googlechrome://www.google.com">Link C</a><br/><br/>
 
+<a href="googlechrome://www.google.com" target="_blank">Link D</a><br/><br/>
 
 
 </body></html>
