--- a/yay.html
+++ b/yay.html
@@ -32,4 +32,6 @@
 <a href="googlechrome://www.google.com" target="_blank">Custom URL Scheme B</a><br/><br/>
 
 
+<a href="yayr">YAY REDIRECT</a><br/><br/>
+
 </body></html>
