--- a/yay.html
+++ b/yay.html
@@ -25,7 +25,9 @@
 <a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">Intent Link B</a><br/><br/>
 
 
-<a href="intent://stackoverflow.com/questions/29250152/what-is-the-intent-to-launch-any-website-link-in-google-chrome#Intent;scheme=http;package=com.android.chrome;end">Intent Link C</a><br/><br/>
+<a href="intent://ibm.com#Intent;scheme=http;package=com.android.chrome;end">Intent Link C (Chrome to IBM wo/FB)</a><br/><br/>
+
+<a href="intent://ibm.com#Intent;scheme=http;package=com.android.chrome;S.browser_fallback_url=http%3A%2F%2Fbbc.co.uk;end">Intent Link D (Chrome to IBM w/FB to BBC)</a><br/><br/>
 
 <a href="googlechrome://www.google.com">Custom URL Scheme A</a><br/><br/>
 
